fixed the banner + ui misalignment

--- a/styles/core/header.styl
+++ b/styles/core/header.styl
@@ -82,9 +82,6 @@ header
                 position relative
                 top 2px
 
-                &.icon-game
-                    zoom 1.2
-
             button.close
                 background color-red
                 width 25px
@@ -130,20 +127,23 @@ header
     padding 7px 0
     margin-bottom 20px
     font-size 90%
-    
+    font-weight 400
+
     a
         color #fff
         position relative
+        font-size 17.5px
+        text-transform: none
         
         &:hover
             text-decoration underline
         
         img
             position absolute
-            width 50px
+            width 55px
             top 0
-            margin-top -15px
-            left -70px
+            margin-top -17.5px
+            left -75px
             -webkit-transform rotate(-12deg)
             -moz-transform rotate(-12deg)
             -o-transform rotate(-12deg)
@@ -152,3 +152,4 @@ header
         
         span
             font-weight 600
+            font-smoothing: antialiased
